--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <header>
         <div class="container">
             <div class="header-left">
-                <img class="logo" src="/Users/nishiokakentaro/Downloads/GNLF/GNLF logo_背景透過.png">
+                <img class="logo" src="https://github.com/nsktr/gnlf_demo-about.github.io/blob/main/GNLF%20logo_背景透過.png">
             </div>
             <div class="header-list">
                 <a href="#">About Us</a>
