--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
                 <img class="logo" src="https://github.com/nsktr/gnlf_demo-about.github.io/blob/main/GNLF%20logo.png?raw=true">
             </div>
             <div class="header-list">
+                <a href="https://nsktr.github.io/gnlf_demo.github.io/">Home</a>
                 <a href="#">About Us</a>
                 <a href="#">Tokyo 2022</a>
                 <a href="#">過去のフォーラム</a>
